# market

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  docker-compose.test.yml  docker-compose.yml
services/ml-analyze/: .dockerignore  .env.example  CLAUDE.md  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
services/ml-analyze/src/: __init__.py
services/ml-analyze/src/api/: __init__.py  main.py  metrics.py
services/ml-analyze/src/api/routes/: __init__.py  (+2 more)
services/ml-analyze/src/config/: __init__.py  settings.py
services/ml-analyze/src/db/: __init__.py  connection.py  models.py
services/ml-analyze/src/ingest/: __init__.py  chunker.py  excel_strategy.py  parser_factory.py  pdf_strategy.py  table_normalizer.py
services/ml-analyze/src/rag/: __init__.py  merger_agent.py  prompt_templates.py  vector_service.py
services/ml-analyze/src/schemas/: __init__.py  category.py  domain.py  extraction.py  requests.py  responses.py
services/ml-analyze/src/services/: __init__.py  category_normalizer.py  deduplication_service.py  ingestion_service.py  job_service.py  matching_service.py  two_stage_parser.py
services/ml-analyze/src/tasks/: __init__.py  file_analysis_task.py
services/ml-analyze/src/utils/: __init__.py  errors.py  file_reader.py  logger.py  name_parser.py  price_parser.py
services/ml-analyze/tests/: __init__.py  conftest.py
services/ml-analyze/tests/api/: __init__.py  test_analyze_routes.py
services/ml-analyze/tests/e2e/: test_category_matching.py  test_deduplication.py  test_full_pipeline.py  test_multi_sheet_upload.py  test_sheet_selection.py  test_standard_upload.py
services/ml-analyze/tests/fixtures/: sample.xlsx
services/ml-analyze/tests/integration/: test_api_endpoints.py  test_file_parsing.py  test_llm_matching.py  test_matching_service.py  test_ollama_embeddings.py  test_performance.py  test_pgvector_search.py
services/ml-analyze/tests/schemas/: test_category.py  test_extraction.py
services/ml-analyze/tests/services/: __init__.py  test_category_normalizer.py  test_deduplication_service.py  test_langchain_extractor.py  test_markdown_converter.py  test_sheet_selector.py
services/ml-analyze/tests/unit/: test_chunker.py  test_excel_strategy.py  test_job_service.py  test_merger_agent.py  test_name_parser.py  test_pdf_strategy.py  test_price_parser.py  test_prompt_templates.py  test_vector_service.py
(+429 files in other folders)
